--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -7,13 +7,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0 20px;
 }
 
 .card img {
   width: 250px;
   height: 250px;
-  margin: 10px auto;
-  object-fit: cover;
+  margin: 10px 10px;
 }
 .card h3 {
   color: #ff6464;
